--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "identity-ui",
+  "name": "login-ui",
   "private": true,
   "version": "0.0.60",
   "description": "web app built in reactant",
@@ -28,12 +28,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "@reactant/core": "^0.0.60",
-    "@reactant/react-router": "^0.0.60",
-    "@reactant/redux": "^0.0.60",
-    "@reactant/sass": "^0.0.60",
-    "@reactant/styled-components": "^0.0.60",
-    "@reactant/web": "^0.0.60",
+    "@reactant/core": "^0.0.61",
+    "@reactant/react-router": "^0.0.61",
+    "@reactant/redux": "^0.0.61",
+    "@reactant/sass": "^0.0.61",
+    "@reactant/styled-components": "^0.0.61",
+    "@reactant/web-isomorphic": "^0.0.61",
     "autobind": "^1.0.3",
     "autobind-decorator": "^2.4.0",
     "axios": "^0.18.0",
@@ -54,7 +54,7 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "@reactant/cli": "^0.0.60",
+    "@reactant/cli": "^0.0.61",
     "@storybook/addon-actions": "^4.1.2",
     "@storybook/addon-links": "^4.1.2",
     "@storybook/react": "^4.1.2",
