--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "extends": ["jam"],
+  "globals": {
+    "window": true
+  },
   "rules": {
     "no-empty": "off",
     "import/no-extraneous-dependencies": [
